# tasty-strategist

./: .gitignore  README.md  account_updates.py  dxfeed_api.ipynb  live_prices.py  pricing.ipynb  pyproject.toml  sample_ui.py  strategist.py  tasty_api.ipynb  testing_companion.ipynb  tt_ui.py
exercise/: dxfeed_api.ipynb  testing_companion.ipynb
lib/: TTApi.py  TTOrder.py  __init__.py
sandbox/: tasty_api.ipynb
tastystrategist/: TTConfig.py  __init__.py  main.py  position.py  strategist.py
tastystrategist/streamer/: __init__.py  live_prices.py
